test: refatora classes de teste de integração para ModelService e ModelController